<resources>
    <string name="app_name">JosPipa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_our_locations">Map</string>
    <string name="copyright">\u00A9 Copyright Joslabs Ltd</string>
    <string name="main_title">Jos utilities</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gas_title">Jos Gas </string>
    <string name="test_gas_name">Ki-Gas</string>
    <string name="cash_test">Ksh 500</string>

    <string name="last_ordered">last ordered</string>
    <string name="lowest_price">lowest price</string>
    <string name="six_kg">6 kgs</string>
    <string name="thirteen">13 kgs</string>
    <string name="three_kg">3 kgs</string>

    <string name="register_user">Register </string>
    <string name="login">Login</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_kotlin_products">KotlinProducts</string>
</resources>
