<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GasPoint"
    android:background="@color/background_activity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_card_height"
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"

        android:layout_marginBottom="@dimen/margin_main"
        android:theme="@style/AppTheme.NoActionBar">


    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:id="@+id/collapsing_toolbar"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary"
        app:statusBarScrim="@android:color/transparent"
        android:fitsSystemWindows="true"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="48dp"
        >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/material_card_height"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/card_radius"
    android:id="@+id/material_card">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_color">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gas_title"
        android:textAlignment="center"
        android:textSize="@dimen/texthead"
        android:textColor="@color/text_main_card"
        android:layout_margin="@dimen/fab_margin"
        android:id="@+id/txt_gas_head"
        />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/circularimg"
            android:layout_height="@dimen/circularimg"
            android:elevation="@dimen/cardview_default_elevation"
            android:id="@+id/img_featured"
            android:layout_alignParentLeft="true"
            android:src="@drawable/gas"
            app:civ_border_color="@color/text_main_card"
            app:civ_border_width="1dp"
            android:layout_below="@id/txt_gas_head"
            android:layout_margin="@dimen/cardview_default_radius"/>
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:text="@string/test_gas_name"
            android:id="@+id/ft_txt_gas"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/img_featured"
            android:textAlignment="center"
            android:textColor="@color/text_main_card"
            />
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cash_test"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/ft_txt_gas"
            android:textColor="@color/text_main_card"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/circularimg"
            android:layout_height="@dimen/circularimg"
            android:elevation="@dimen/cardview_default_elevation"
            android:id="@+id/img_lowest"
            android:layout_centerInParent="true"
            android:src="@drawable/gas"
            app:civ_border_color="@color/text_main_card"
            app:civ_border_width="1dp"
            android:layout_below="@id/txt_gas_head"
            android:layout_margin="@dimen/cardview_default_radius"/>
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:text="@string/lowest_price"
            android:id="@+id/ft_txt_gas_lowest"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/img_lowest"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:textColor="@color/text_main_card"/>
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cash_test"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/ft_txt_gas_lowest"
            android:layout_centerInParent="true"
            android:textColor="@color/text_main_card"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/circularimg"
            android:layout_height="@dimen/circularimg"
            android:elevation="@dimen/cardview_default_elevation"
            android:id="@+id/img_last_order"
            android:layout_alignParentRight="true"
            android:src="@drawable/gas"
            app:civ_border_color="@color/text_main_card"
            app:civ_border_width="1dp"
            android:layout_below="@id/txt_gas_head"
            android:layout_margin="@dimen/cardview_default_radius"/>
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:text="@string/last_ordered"
            android:id="@+id/ft_txt_gas_lastorder"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/img_last_order"
            android:textAlignment="center"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_main_card"/>
        <TextView
            android:layout_width="@dimen/circularimg"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cash_test"
            android:textSize="@dimen/textsize"
            android:layout_below="@id/ft_txt_gas_lastorder"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_main_card"/>



    </RelativeLayout>
</androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:visibility="gone"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:contentInsetStart="0dp"
            app:layout_collapseMode="pin"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <include
        android:id="@+id/layermain"
        layout="@layout/product_layer"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>