<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/cardmargin">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardmargin"
        android:layout_margin="@dimen/cardmargin"
        app:cardCornerRadius="@dimen/card_radius"
        android:id="@+id/product_card"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/test_gas_name"
                android:textSize="@dimen/texthead"
                android:id="@+id/txt_product_name"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/circularimg"
                android:layout_height="@dimen/circularimg"
                android:elevation="@dimen/cardview_default_elevation"
                android:id="@+id/img_product"
                android:layout_alignParentLeft="true"
                android:src="@drawable/gas"

                android:layout_margin="@dimen/cardmargin"
                android:layout_below="@id/txt_product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_product"
                android:layout_below="@id/txt_product_name"
                android:id="@+id/price_layer"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/product_linear_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six_kg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_test"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/product_linear_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six_kg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_test"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/product_linear_margin">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six_kg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_test"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_edittext"
                android:text="Order"
                android:layout_below="@id/price_layer"
                android:layout_alignParentRight="true"
                android:id="@+id/btnorder"
                android:background="@drawable/roundbuttons"
                android:layout_margin="@dimen/meter_status_margin"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/green"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_below="@id/price_layer"
                android:layout_toLeftOf="@id/btnorder"
                android:editable="false">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Total Price"
                    android:textColorHint="@color/green"

                    android:text="Ksh 600"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>